7854
It's a regression since 2.9.
{noformat}
% scalac29 -d /tmp bug.scala 
bug.scala:9: error: overloaded method value g with alternatives:
  (x: C2)String <and>
  (x: C1)String
 cannot be applied to (String)
    if (false) List(g(x)) else List[C1]() map g
                    ^
one error found
{noformat}
